sfSandBoxCode/force-app/main/default/objects/Reg_Config__c/Reg_Config__c.object-meta.xml
<CustomObject>
    <description>Reg Factor Object Config</description>
    <label>Reg Config</label>
    <nameField>
        <label>Reg Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reg Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>