sfSandBoxCode/force-app/main/default/objects/Reg_Config__c/fields/Guiding_Question__c.field-meta.xml
<CustomField>
    <fullName>Guiding_Question__c</fullName>
    <description>Guiding Question Column</description>
    <label>Guiding Question</label>
    <type>TextArea</type>
</CustomField>