sfSandBoxCode/force-app/main/default/objects/Reg_Config__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Level Column</description>
    <label>Level</label>
    <length>1</length>
    <type>Text</type>
</CustomField>