sfSandBoxCode/force-app/main/default/objects/Reg_Config__c/fields/Level_Description__c.field-meta.xml
<CustomField>
    <fullName>Level_Description__c</fullName>
    <description>Level Description Column</description>
    <label>Level Description</label>
    <type>TextArea</type>
</CustomField>