sfSandBoxCode/force-app/main/default/objects/Reg_Config__c/fields/REG_Code__c.field-meta.xml
<CustomField>
    <fullName>REG_Code__c</fullName>
    <description>REG Code</description>
    <inlineHelpText>REG Code</inlineHelpText>
    <label>REG Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>