sfSandBoxCode/force-app/main/default/objects/Reg_Config__c/fields/Reg_Factor__c.field-meta.xml
<CustomField>
    <fullName>Reg_Factor__c</fullName>
    <description>Reg  Factor Column</description>
    <label>Reg Factor</label>
    <length>250</length>
    <type>Text</type>
</CustomField>