sfSandBoxCode/force-app/main/default/objects/Reg_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>REG_Code__c</columns>
    <columns>Reg_Factor__c</columns>
    <columns>Level__c</columns>
    <columns>Guiding_Question__c</columns>
    <columns>Level_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>