sfSandBoxCode/force-app/main/default/objects/Reg_Config__c/listViews/FLI_Directors_Reg_Config.listView-meta.xml
<ListView>
    <fullName>FLI_Directors_Reg_Config</fullName>
    <filterScope>Queue</filterScope>
    <label>FLI Directors</label>
    <queue>FLI_Directors</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>